Widget headlines no longer overflow

--- a/receptionist_client/web/styles/main.css
+++ b/receptionist_client/web/styles/main.css
@@ -103,6 +103,7 @@ button::-moz-focus-inner {
   font-size: 0.8em;
   color: #fff;
   box-shadow: 0px 2px 2px 0px #aaa;
+  overflow: hidden;
 }
 
 .generic-widget-list {
